--- a/index.html
+++ b/index.html
@@ -1,29 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Thlini19998 - Home</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PORTFOLIO</title>
+    <style>
+        body {
+            font-family: 'Open Sans', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        nav {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+        }
+
+        section {
+            padding: 40px 0;
+        }
+
+        section h2 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        section p {
+            text-align: center;
+            font-size: 18px;
+            line-height: 1.5;
+        }
+
+        section ul {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        section ul li {
+            display: inline-block;
+            margin: 0 10px;
+        }
+
+        section .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        .go-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            border-radius: 50%;
+            display: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>
-        As a final-year Computer Engineering undergraduate, my journey has been fueled by an unwavering passion for both Machine Learning and Software Development.
-        I am actively seeking career opportunities that allow me to bridge the worlds of Machine Learning and Software Development, driving innovation and delivering exceptional results.
-    </p>
-    <a href="about.html">Read More</a>
+
+    <header>
+        <h1>Welcome to Thilini's Digital Portfolio!</h1>
+    </header>
 
     <nav>
-        <ul>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="video.html">Video</a></li>
-        </ul>
+        <a href="#top">HOME</a>
+        <a href="#aboutme">ABOUT ME</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#team">OUR TEAM</a>
+        <a href="#video">VIDEO</a>
+        <a href="#contact">CONTACT</a>
     </nav>
 
+    <section id="top">
+        <!-- Your slider content goes here -->
+    </section>
+
+    <section id="aboutme">
+        <div class="container">
+            <h2>ABOUT ME</h2>
+            <p>Hello there! I'm Thilini Madushani, a final-year Computer Engineering undergraduate with a passion for exploring the endless possibilities of the digital world.<br>
+				 As I embark on the exciting journey of graduating, I am eager to apply my knowledge and skills to real-world challenges. Join me on this adventure as we dive into the realms of machine learning, artificial intelligence, and innovative software development.<br> 
+				 <br>Explore the future of technology with me!<br></p>
+
+            <ul>
+				<br>
+                <li>AI Enthusiast</li>
+                <li>Innovative</li>
+                <li>Problem Solver</li>
+                <li>Creative</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="projects">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-2"></div>
+				<div class="col-md-8 text-center">
+					<h2>PROJECTS</h2><br><br>
+					<p>#NodeJS #React #C #Java #Python #Angular #SpringBoot #MySQL #MongoDB #C++ #AWS #Azure</p><br>
+				</div>
+				<div class="col-md-12"></div>
+
+				<div class="col-sm-6 col-md-4">
+					<h5><b>Acceleration of deep neural network based nanopore super accuracy basecalling</b></h5>
+					<p>Optimizing nanopore basecalling, targeting GPU-based recurrent neural network bottlenecks. Analyzed complex codebase, learned nanopore data intricacies, and applied acceleration techniques to boost application efficiency.</p>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<h5><b>Maker Mate</b></h5>
+					<p>A system that enables the lab users to apply for the project/ experiment requirements online and collect tools and equipment accordingly from a pickup locker while the lab admin can manage the entire inventory online with ease.<br>
+						Skills Gained: Full Stack Development, CI/CD, DevOps, SCRUM</p>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<h5><b>Visualization of Teacher Student Activities</b></h5>
+					<p>A web application that can be used to represent activities of teachers and students over an
+						e-learning system based on their log data, and analysing them using ML techniques.<br>
+						Skills Gained: Database modeling & development, Frontend web application development,
+						Backend development, REST APIs</p>
+				</div>
+				<div class="col-md-12"><br><br></div>
+				<div class="col-md-12 text-center">
+					<br><br><a href="https://github.com/Thilini98"><h8>Check more from here</h8></a><br><br>
+				</div>
+			</div>
+		</div>       
+    </section>
+
+    <section id="team">
+        <div class="container">
+			<div class="row">
+				<div class="col-md-2"></div>
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<h2>MEET THE TEAM</h2>
+					<p></p>
+				</div>
+				<div class="col-md-12"></div>
+				<div class="col-sm-6 col-md-4">					
+						<h4>Fernando HHD (E/17/084)</h4>
+						<p></p>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<!--img src="images/member2.jpg" class="img-responsive" alt="team 2"-->
+						<h4>Kumarasinghe VN (E/17/180)</h4>
+						<p></p>
+				</div>
+				<div class="col-sm-6 col-md-4">
+						<h4>Madushani WT (E/17/201)</h4>
+						<p></p>
+				</div>
+				<div class="col-sm-6 col-md-4">
+						<h4>Jayawardhana JRAB (E/17/143)</h4>
+						<p></p>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<h4>Welagedara BA (E/17/384)</h4>
+					<p></p>
+			</div>
+			<div class="col-sm-6 col-md-4">
+					<h4>Wijayapala WDCN (E/17/394)</h4>
+					<p></p>
+			</div>
+			</div>
+		</div>
+    </section>
+
+    <section id="video">
+        <div class="container text-center">
+			<div class="row">
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<h2>VIDEO</h2><br><br>				
+				</div>
+				<div class="col-md-12"></div>
+				<div class="col-md-6">
+					<h3><a href="https://youtu.be/IfmVSyHfBZs">The Melody of Transformation </a></h3><br><br>
+					<div class="container text-center">
+						<img src="images/img-video.png" alt="video">
+						<!--video width="640" height="360" controls>
+							<source src="video/Digital Art video.mp4" type="video/mp4">
+							Your browser does not support the video tag.
+						</video-->
+					</div>
+				</div>
+				<div class="col-md-12"><br><br><br></div>
+			</div>
+		</div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-4 address">
+                    <h2>CONTACT ME</h2>
+                    <p>Feel free to contact me.</p>
+                </div>
+                <div class="col-sm-6 col-md-8">
+                    <h3>MY ADDRESS</h3>
+                    <p><i class="fa fa-phone"></i> +94 77 68 18 756</p>
+                    <p><i class="fa fa-envelope-o"></i>madushaniwt@gmail.com</p>
+                    <p><i class="fa fa-globe"></i> <a href="https://www.thecn.com/WM385">https://www.thecn.com/WM385</a></p>
+                    <p><i class="fa fa-map-marker"></i> No. 95/3, Padukka Rd, Horana.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; 2023 Thlini19998</p>
+        <div class="container">
+            <div class="social_icon">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-phone"></a>
+                <a href="https://www.linkedin.com/in/thilini-madushani-732280216/" class="fa fa-linkedin"></a>
+                <a href="https://www.thecn.com/WM385" class="fa fa-globe"></a>
+            </div>
+            <p>Copyright © 2024 W. T. Madushani</p>
+        </div>
     </footer>
+
+    <a href="#top" class="go-top">&#8593;</a>
+
 </body>
+
 </html>
